k8s/5-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: classkira-app
  namespace: default
  labels:
    app: classkira-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: classkira-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: classkira-app
    spec:
      containers:
        - name: classkira
          image: asia-south1-docker.pkg.dev/classkira-platform/lms-repo/classkira-app:v1
          ports:
            - containerPort: 80
          command:
            - sh
            - -c
            - |
              echo "==> Setting storage permissions..."
              chown -R www-data:www-data /var/www/html/storage /var/www/html/bootstrap/cache
              chmod -R 775 /var/www/html/storage /var/www/html/bootstrap/cache

              echo "==> Caching config for performance..."
              php artisan config:cache
              php artisan route:cache
              php artisan view:cache

              echo "==> Starting Apache..."
              exec apache2-foreground
          volumeMounts:
            - name: laravel-storage
              mountPath: /var/www/html/storage/app
              subPath: app
            - name: laravel-storage
              mountPath: /var/www/html/storage/logs
              subPath: logs
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "250m"
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 20
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 40
            periodSeconds: 20
            failureThreshold: 3

      volumes:
        - name: laravel-storage
          persistentVolumeClaim:
            claimName: laravel-storage-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: classkira-service
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: classkira-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
